--- a/src/App.css
+++ b/src/App.css
@@ -12,8 +12,7 @@
   font-size: 18px;
   font-weight: 300;
 }
-
-#navbar li {
+class #navbar li {
   position: relative;
   float: left;
   line-height: 60px;
